--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-chat-elements": "^10.15.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "socket.io-client": "^4.1.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
