--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.2",
+    "emoji-picker-react": "^3.4.8",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-chat-elements": "^10.15.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-input-emoji": "^4.0.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.1.3",
