--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.2",
+    "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-chat-elements": "^10.15.0",
